--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --primary: #d2ee7f;
+  --light: #f9f7f8;
 }
 
 html {
@@ -9,6 +10,11 @@ html {
 body {
   font-family: "Noto Sans Mono", monospace;
   height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+h1{
   padding: 0;
   margin: 0;
 }
@@ -26,6 +32,16 @@ button {
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+}
+
+.rounded-button{
+  background-color: var(--light);
+  padding: 8px 12px;
+  border-radius: 16px;
+}
+
+.rounded-button:hover{
+  background-color: var(--primary);
 }
 
 nav {
@@ -101,5 +117,79 @@ nav {
     object-fit: cover;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
       0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  }
+}
+
+
+#product-page{
+  display: flex;
+  flex-direction: column;
+  padding: 5rem 0;
+  gap: 3rem;
+
+  .product-title-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    h1{
+      font-size: 2.5rem;
+      font-weight: 500;
+    }
+
+    p{
+      font-size: 0.8rem;
+    }
+  }
+
+  .category-container{
+    display: flex;
+    gap: 1.2rem;
+  }
+
+  .product-container{
+    display: flex;
+    gap: 1.2rem;
+
+    .product-card{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .image-container{
+        position: relative;
+        transition: all 0.4s ease-in-out;
+
+        button{
+          position: absolute;
+          top: 1rem;
+          right: 1rem;
+          padding: 8px 12px;
+          background-color: var(--light);
+        }
+
+        button:hover{
+          background-color: var(--primary);
+        }
+      }
+    }
+
+    img{
+      width: 13rem;
+      height: 13rem;
+      object-fit: cover;
+      border-radius: 16px;
+      transition: all 0.4s ease-in-out;
+      box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+      0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    }
+
+    .image-container:hover{
+      transform: scale(1.1) translateY(-1rem);
+    }
+
+    img:hover{
+      filter: sepia(30%);
+    }
   }
 }
