--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   margin: 0;
 }
 
-h1{
+h1 {
   padding: 0;
   margin: 0;
 }
@@ -34,13 +34,13 @@ button {
   transition: all 0.3s ease-in-out;
 }
 
-.rounded-button{
+.rounded-button {
   background-color: var(--light);
   padding: 8px 12px;
   border-radius: 16px;
 }
 
-.rounded-button:hover{
+.rounded-button:hover {
   background-color: var(--primary);
 }
 
@@ -120,47 +120,46 @@ nav {
   }
 }
 
-
-#product-page{
+#product-page {
   display: flex;
   flex-direction: column;
   padding: 5rem 0;
   gap: 3rem;
 
-  .product-title-container{
+  .product-title-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    h1{
+    h1 {
       font-size: 2.5rem;
       font-weight: 500;
     }
 
-    p{
-      font-size: 0.8rem;
+    p {
+      font-size: 0.9rem;
     }
   }
 
-  .category-container{
+  .category-container {
     display: flex;
     gap: 1.2rem;
   }
 
-  .product-container{
+  .product-container {
     display: flex;
     gap: 1.2rem;
 
-    .product-card{
+    .product-card {
       display: flex;
       flex-direction: column;
       align-items: center;
 
-      .image-container{
+      .image-container {
         position: relative;
         transition: all 0.4s ease-in-out;
 
-        button{
+        button {
           position: absolute;
           top: 1rem;
           right: 1rem;
@@ -168,28 +167,89 @@ nav {
           background-color: var(--light);
         }
 
-        button:hover{
+        button:hover {
           background-color: var(--primary);
         }
       }
     }
 
-    img{
+    img {
       width: 13rem;
       height: 13rem;
       object-fit: cover;
       border-radius: 16px;
       transition: all 0.4s ease-in-out;
       box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
-      0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+        0px 10px 15px -3px rgba(0, 0, 0, 0.1);
     }
 
-    .image-container:hover{
+    .image-container:hover {
       transform: scale(1.1) translateY(-1rem);
     }
 
-    img:hover{
+    img:hover {
       filter: sepia(30%);
+    }
+  }
+}
+
+#product-gallery {
+  display: flex;
+  flex-direction: column;
+  padding: 4rem 0;
+  align-items: stretch;
+
+  h2 {
+    font-size: 3.5rem;
+    text-wrap: balance;
+    text-align: center;
+    font-weight: 500;
+  }
+
+  .product-image-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 24px;
+
+    img {
+      aspect-ratio: 2 / 1;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      border-radius: 16px;
+      box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    }
+
+    .img-container {
+      position: relative;
+      transition: all 0.4s ease-in-out;
+
+      p {
+        position: absolute;
+        left: 8px;
+        bottom: 0;
+        color: black;
+        background-color: white;
+        padding: 8px 12px;
+        border-radius: 8px;
+      }
+    }
+
+    .product-image-column {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      flex: 1;
+    }
+
+    .product-main-image {
+      flex: 1;
+    }
+
+    .img-container:hover {
+      transform: translateY(-10px);
     }
   }
 }
