--- a/style.css
+++ b/style.css
@@ -61,6 +61,16 @@ nav {
   }
 }
 
+.btn-shop-now {
+  background-color: var(--primary);
+  padding: 8px 12px;
+}
+
+.btn-shop-now:hover {
+  outline: 1px solid var(--primary);
+  background-color: transparent;
+}
+
 #main-page {
   display: flex;
   flex-direction: row;
@@ -78,16 +88,6 @@ nav {
     display: flex;
     flex-direction: none;
     gap: 16px;
-  }
-
-  .btn-shop-now {
-    background-color: var(--primary);
-    padding: 8px 12px;
-  }
-
-  .btn-shop-now:hover {
-    outline: 1px solid var(--primary);
-    background-color: transparent;
   }
 
   .btn-show-reel {
@@ -213,7 +213,7 @@ nav {
     gap: 24px;
 
     img {
-      aspect-ratio: 2 / 1;
+      aspect-ratio: 3 / 1;
       object-fit: cover;
       width: 100%;
       height: 100%;
@@ -251,5 +251,34 @@ nav {
     .img-container:hover {
       transform: translateY(-10px);
     }
+  }
+}
+
+#promotion-page {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 0;
+  gap: 1rem;
+
+  img {
+    width: 20rem;
+    height: 20rem;
+    object-fit: cover;
+    border-radius: 16px;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+      0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  }
+  img:hover {
+    transform: scale(1.05);
+  }
+
+  .promotion-description {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    align-items: flex-end;
+    text-wrap: balance;
   }
 }
