menambahkan animasi pada web

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
 
 h1 {
   padding: 0;
-  margin: 0;
 }
 
 main {
@@ -77,6 +76,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   text-wrap: balance;
+  height: 40rem;
 
   h1 {
     font-size: 3rem;
@@ -125,6 +125,7 @@ nav {
   flex-direction: column;
   padding: 5rem 0;
   gap: 3rem;
+  height: 40rem;
 
   .product-title-container {
     display: flex;
@@ -198,6 +199,7 @@ nav {
   flex-direction: column;
   padding: 4rem 0;
   align-items: stretch;
+  height: 40rem;
 
   h2 {
     font-size: 3.5rem;
@@ -260,6 +262,7 @@ nav {
   align-items: center;
   padding: 2rem 0;
   gap: 1rem;
+  height: 40rem;
 
   img {
     width: 20rem;
@@ -280,5 +283,20 @@ nav {
     text-align: right;
     align-items: flex-end;
     text-wrap: balance;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
