--- a/style.css
+++ b/style.css
@@ -300,3 +300,129 @@ nav {
     opacity: 1;
   }
 }
+
+/* footer */
+footer {
+  text-align: center;
+  padding: 1rem 0 3rem;
+  margin-top: 3rem;
+}
+
+footer .socials {
+  padding: 1rem 0;
+}
+
+footer .socials a {
+  color: #0e0d0d;
+  margin: 1rem;
+}
+
+footer .socials a:hover,
+footer .links a:hover {
+  color: rgb(79, 9, 179);
+}
+
+footer .links {
+  margin-bottom: 1.4rem;
+  list-style-type: none;
+}
+
+footer .links a {
+  color: #0f0f0f;
+  padding: 0.7rem 1rem;
+  text-decoration: none;
+}
+
+footer .credit {
+  list-style-type: none;
+  font-size: 0.8rem;
+}
+
+footer .credit a {
+  text-decoration: none;
+  color: var(--bg);
+  font-weight: 700;
+}
+
+/* media query */
+
+/* ukuran tablet */
+@media (max-width: 750px) {
+  html {
+    font-size: 75%;
+  }
+
+  nav {
+    font-size: 120%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  nav {
+    font-size: 120%;
+  }
+
+  #main-page {
+    img {
+      display: none;
+    }
+  }
+
+  #product-page {
+    margin-bottom: 30rem;
+  }
+
+  .category-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .product-title-container {
+    flex-direction: column;
+  }
+
+  .product-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
+  .image-container img {
+    width: 100%;
+  }
+
+  #product-gallery {
+    height: 30rem;
+    h2 {
+      font-size: 2rem;
+    }
+
+    .product-image-column {
+      display: flex;
+      flex-direction: column;
+
+      img {
+        aspect-ratio: 2/1;
+      }
+    }
+  }
+
+  #promotion-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    .promotion-description {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      text-wrap: balance;
+      order: 1;
+    }
+
+    img {
+      order: 2;
+    }
+  }
+}
